--- a/cloudrun/webhook/Dockerfile
+++ b/cloudrun/webhook/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . ./
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ./goapp ./
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ./goapp ./cmd/server/main.go
 
 
 FROM alpine:3
