--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: terraform-docs/gh-actions@v1
         with:
           git-push: "true"
-          recursive: true
+          config-file: .terraform-docs.yml
