--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -1,4 +1,4 @@
-formatter: "markdown table" # this is required
+formatter: "markdown table"
 
 version: ""
 
@@ -13,9 +13,6 @@ recursive:
 sections:
   hide: []
   show: []
-
-  hide-all: false # deprecated in v0.13.0, removed in v0.15.0
-  show-all: true # deprecated in v0.13.0, removed in v0.15.0
 
 content: ""
 
